<resources>
    <string name="app_name">PegasusClient</string>

    <!-- Main Window -->

    <string name="bth_about">About</string>
    <string name="bth_settings">Settings</string>
    <string name="bth_manual_control">Manual Control</string>
    <string name="bth_autonomous">Autonomous</string>


    <!--Settings-->
    <string name="title_settings">Settings</string>
    <string name="settings_connections_title">Network Connections</string>
    <string name="title_settings_wifi">Wifi</string>
    <string name="settings_value_unknown">Unknown</string>
    <string name="settings_value_enable">Enable</string>
    <string name="settings_value_disable">Disable</string>
    <string name="settings_value_not_supported">Not Supported</string>

    <!--Bluetooth Section-->
    <string name="settings_connection_title_bluetooth">Bluetooth</string>
    <string name="setting_connections_bluetooth_status">Bluetooth Status:</string>
    <string name="settings_connection_bluetooth_summary">Your Bluetooth connections and devices</string>
    <string name="settings_connection_bluetooth_local_name">Your Device Name</string>
    <string name="settings_connection_bluetooth_local_address">Your Device Address</string>
    <string name="settings_connection_bluetooth_remote_name">Remote Device Name</string>
    <string name="settings_connection_bluetooth_remote_address">Remote Device Address</string>
    <string name="settings_connection_bluetooth_remote_signal">Remote Device Signal</string>

    <!-- Bluetooth dialog -->
    <string name="title_bluetooth">Bluetooth</string>

    <string name="title_paired_devices">Your Paired Devices</string>
    <string name="title_other_devices">Devices Around You</string>
    <string name="button_scan">Scan</string>

    <string name="scanning">Scanning...</string>
    <string name="select_device">Select Device</string>
    <string name="none_found">No such device around</string>
    <string name="none_paired">No paired devices</string>

    <string name="bluetooth_device_name">Name</string>
    <string name="bluetooth_device_address">Address</string>
    <string name="bluetooth_device_signal">Signal</string>


    <!--Manual Control -->
    <string name="manual_control_direction_title">Driving Direction:</string>
    <string name="manual_control_direction_forward">Forward</string>
    <string name="manual_control_direction_reverse">Reverse</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pegasus_settings">PegasusSettings</string>

    <string name="Pegasus_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_dialog">AboutDialog</string>

</resources>

